# arxiv-tui

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dependencies.txt  README.md  REUSE.toml  index.html
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  clang-format.yml  coverage.yml  docs.yml  release.yml  reuse.yml  sanitizers.yml  static-analysis.yml
CMake/: CompilerWarnings.cmake  Coverage.cmake  FindFilesystem.cmake  ProgramOptions.cmake  PyLink.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: changelog.rst  conf.py  configuration.rst  features.rst  index.rst  requirements.txt
docs/_templates/: versioning.html
include/Arxiv/: App.hh  AppCore.hh  Article.hh  Clipboard.hh  Components.hh  Config.hh  CrashHandler.hh  DatabaseManager.hh  Fetcher.hh  FuzzyMatch.hh  GuiStyle.hh  InstallPaths.hh.in  KeyBindings.hh  LatexUtils.hh  Paths.hh  Ranker.hh  Replay.hh
include/Arxiv/Views/: Colors.hh
latest/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
latest/.doctrees/: environment.pickle
main/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html  searchindex.js
main/.doctrees/: changelog.doctree  configuration.doctree  environment.pickle  features.doctree  ranking.doctree
main/_sources/: configuration.rst.txt
src/: CMakeLists.txt
src/Arxiv/: App.cc  AppCore.cc  CMakeLists.txt  Clipboard.cc  Components.cc  Config.cc  Config.hh  CrashHandler.cc  DatabaseManager.cc  Fetcher.cc  GuiStyle.cc  KeyBindings.cc  LatexUtils.cc  Paths.cc  Ranker.cc  Replay.cc  main.cc
src/Arxiv/Views/: ArticlePane.cc  AssignProjectDialog.cc  CategoryFilterDialog.cc  DateRangeDialog.cc  DetailView.cc  ExportDialog.cc  FilterPane.cc  HelpDialog.cc  ImportDialog.cc  KeywordEditorDialog.cc  MainRenderer.cc  NewProjectDialog.cc  NotesDialog.cc  RatingDialog.cc  SearchDialog.cc  SettingsDialog.cc
src/GUI/: ArxivGuiApp.cc  ArxivGuiApp.hh  CMakeLists.txt  main.cc
src/GUI/panels/: ArticlePanel.cc  DetailPanel.cc  FilterPanel.cc  ProjectDialog.cc  SettingsPanel.cc
test/: CMakeLists.txt
test/fixtures/: test_config.yml  test_data.hh
test/integration/: StressTest.cc
test/mocks/: DatabaseManagerMock.hh  FetcherMock.hh
test/unit/: AppTest.cc  AppTuiTest.cc  AuthorSubscriptionTest.cc  BackgroundRefreshTest.cc  BibTeXTest.cc  ClipboardTest.cc  ConfigTest.cc  DatabaseManagerIntegrationTest.cc  DatabaseManagerRealTest.cc  DatabaseManagerTest.cc  DigestTest.cc  FetcherRealTest.cc  FetcherTest.cc  FuzzySearchTest.cc  GuiStyleTest.cc  GuiTest.cc  KeyBindingsTest.cc  KeywordEditorTest.cc  KeywordTest.cc  LatexTest.cc  NewArticlesTest.cc  RankerTest.cc  ReplayTest.cc  UndoTest.cc
v0.9.2/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v0.9.2/.doctrees/: contributing.doctree  environment.pickle  features.doctree  index.doctree
v0.9.2/_sources/: keybindings.rst.txt
v0.9.2/_static/: documentation_options.js
v0.9.3/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html  searchindex.js
v0.9.3/.doctrees/: changelog.doctree  configuration.doctree  environment.pickle  keybindings.doctree
v0.9.3/_static/: documentation_options.js
v0.9.4/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v0.9.4/.doctrees/: environment.pickle  installation.doctree  keybindings.doctree
v0.9.4/_static/: documentation_options.js
v0.9.5/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v0.9.5/.doctrees/: environment.pickle
v0.9.5/_sources/: features.rst.txt
v0.9.5/_static/: documentation_options.js
v0.9.6/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v0.9.6/.doctrees/: environment.pickle
v0.9.6/_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt  keybindings.rst.txt
v0.9.6/_static/: documentation_options.js
v0.9.7/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v0.9.7/.doctrees/: environment.pickle
v0.9.7/_static/: documentation_options.js
v1.0.0/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v1.0.0/.doctrees/: environment.pickle  index.doctree
v1.0.1/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v1.0.1/.doctrees/: environment.pickle
v1.0.1/_sources/: installation.rst.txt  ranking.rst.txt
v1.0.1/_static/: documentation_options.js
v1.1.0/: .buildinfo  changelog.html  configuration.html  contributing.html  features.html  genindex.html  index.html  installation.html  keybindings.html  objects.inv  ranking.html  search.html
v1.1.0/.doctrees/: environment.pickle
v1.1.0/_static/: documentation_options.js
